--- a/cachesaver/scripts/frameworks/game24/game24.yaml
+++ b/cachesaver/scripts/frameworks/game24/game24.yaml
@@ -1,6 +1,16 @@
 foa:
-  num_agents: 12
-  num_steps: 12
+  num_agents: 9
+  num_steps: 9
+  k: 1
+  backtrack: 0.5
+  resampling: "linear_filtered"
+  min_steps: 4
+  num_evaluations: 3
+  origin: 120
+
+het_foa:
+  num_agents: 9
+  num_steps: 9
   k: 1
   backtrack: 0.5
   resampling: "linear_filtered"
