--- a/cachesaver/scripts/frameworks/hotpotqa/hotpotqa.yaml
+++ b/cachesaver/scripts/frameworks/hotpotqa/hotpotqa.yaml
@@ -8,6 +8,16 @@ foa:
   num_evaluations: 3
   origin: 10
 
+het_foa:
+  num_agents: 9
+  num_steps: 9
+  k: 1
+  backtrack: 0.5
+  resampling: "linear_filtered"
+  min_steps: 4
+  num_evaluations: 3
+  origin: 120
+
 tot_bfs:
   num_selections: 3
   num_steps: 5
