--- a/cachesaver/scripts/correctness/game24.yaml
+++ b/cachesaver/scripts/correctness/game24.yaml
@@ -1,3 +1,13 @@
+het_foa:
+  num_agents: 9
+  num_steps: 9
+  k: 1
+  backtrack: 0.5
+  resampling: "linear_filtered"
+  min_steps: 4
+  num_evaluations: 3
+  origin: 120
+
 foa:
   num_agents: 7
   num_steps: 7
