--- a/cachesaver/scripts/frameworks/scibench/scibench.yaml
+++ b/cachesaver/scripts/frameworks/scibench/scibench.yaml
@@ -1,10 +1,3 @@
-got:
-  num_selections: 3
-  num_steps: 5
-  num_generate: 5
-  num_evaluations: 3
-  num_best: 2
-
 foa:
   num_agents: 3
   num_steps: 9
@@ -19,3 +12,29 @@ tot_bfs:
   num_selections: 3
   num_steps: 6
   num_evaluations: 3
+
+got:
+  num_selections: 5
+  num_steps: 4
+  num_generate: 10
+  num_evaluations: 3
+  num_best: 2
+
+react:
+  num_steps: 10
+
+het_foa:
+  num_agents: 7
+  num_steps: 7
+  k: 1
+  backtrack: 0.5
+  resampling: "linear_filtered"
+  min_steps: 1
+  num_evaluations: 3
+  origin: 30
+  
+rap:
+  num_iterations: 10
+  num_samples: 5
+  num_evaluations: 3
+  exploration_constant: 1.0
