--- a/cachesaver/scripts/correctness/game24.yaml
+++ b/cachesaver/scripts/correctness/game24.yaml
@@ -1,6 +1,18 @@
-het_foa:
-  num_agents: 9
+new_algo:
+  width: 9
   num_steps: 9
+  max_value: 64
+  k: 1
+  alpha: 0.015
+  backtrack: 0.5
+  resampling: "linear_filtered"
+  min_steps: 4
+  num_evaluations: 3
+  origin: 120
+
+het_foa:
+  num_agents: 6
+  num_steps: 12
   k: 1
   backtrack: 0.5
   resampling: "linear_filtered"
